# NextBoard

./: .editorconfig  .gitattributes  .gitignore  .hardware-butler.json.template  .version-bump.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  conftest.py  gemini-extension.json  launch_gui.py  mypy.ini  pyproject.toml  requirements-dev.txt
docs/: COMMANDS.md  (+23 more)
plugins/hardware-development-butler/scripts/: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements-all.txt  requirements.txt  validate_package.py
plugins/hardware-development-butler/scripts/.codex/agents/: nextboard-hardware-architect.toml
plugins/hardware-development-butler/scripts/agents/: hardware-development-butler.md
plugins/hardware-development-butler/scripts/docs/: ARCHITECTURE_MAP.md  AUTO_WORKFLOW_GUI.md  BEGINNER_GUIDE.md  FEATURES_AND_USAGE.md  GITHUB_LAUNCH_CHECKLIST.md  GITHUB_REPOSITORY_SETTINGS.md  INTEGRATION_COMPLETE.md  MULTI_AGENT_FINAL_REPORT.md  MULTI_AGENT_IMPROVEMENTS.md  MULTI_AGENT_REVIEW.md  OPTIMIZED_FRAMEWORK_REVIEW.md  REFACTORING_REPORT.md  RELEASE_PROCESS.md  adversarial-iteration-001.md  adversarial-iteration-log.md  agent-discussion-decision.md  implementation-roadmap.md  multi-agent-implementation-review-2026-06-09.md
plugins/hardware-development-butler/scripts/embeddedskills/: LICENSE  README.en.md  README.md  __init__.py  safety_cli.py  safety_gate.py
plugins/hardware-development-butler/scripts/embeddedskills/docs/: runtime-resolution-spec.md  skill-template-reference.md
plugins/hardware-development-butler/scripts/embeddedskills/eide/: README.md  SKILL.md  config.example.json
plugins/hardware-development-butler/scripts/embeddedskills/gcc/: README.md
plugins/hardware-development-butler/scripts/embeddedskills/serial/: README.md
plugins/hardware-development-butler/scripts/embeddedskills/ssh/: README.md  SKILL.md
plugins/hardware-development-butler/scripts/embeddedskills/terminal/: README.md  SKILL.md
plugins/hardware-development-butler/scripts/embeddedskills/workflow/: README.md  SKILL.md  config.example.json
plugins/hardware-development-butler/scripts/nextboard/: AGENTS.md  README.md
plugins/hardware-development-butler/scripts/tools/: __init__.py  bench_runbook.py  build_plan.py  build_workbench_exe.py  butler_types.py  command_runner.py  config_plan.py  config_proposal.py  cube_detect.py  debug_logbook.py  document_search_api.py  evidence_qa.py  firmware_code_patcher.py  github_launch_audit.py  hardware_action_audit.py  hardware_action_executor.py  hardware_action_plan.py  hardware_butler.py  hardware_butler_inspect.py  hardware_risk.py  package_hardware_butler_plugin.py  product_doctor.py  project_scanner.py  release_verify.py  runtime_context.py  task_workflows.py
(+223 files in other folders)
